// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fillDetails component should render V2 fill 1`] = `
<DocumentFragment>
  <dl
    class="fill-details__FillDetailList-sc-5nb7jb-0 mycsW"
  >
    <dt
      class="fill-detail__Title-q3it9r-0 gJQtdT"
    >
      <svg
        aria-hidden="true"
        class="sc-bdVaJa iJCmgd fill-detail___StyledHelpWidget-q3it9r-2 ddHJjZ"
        fill="currentColor"
        focusable="false"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 6a3.939 3.939 0 00-3.934 3.934h2C10.066 8.867 10.934 8 12 8s1.934.867 1.934 1.934c0 .598-.481 1.032-1.216 1.626a9.208 9.208 0 00-.691.599c-.998.997-1.027 2.056-1.027 2.174V15h2l-.001-.633c.001-.016.033-.386.441-.793.15-.15.339-.3.535-.458.779-.631 1.958-1.584 1.958-3.182A3.937 3.937 0 0012 6zm-1 10h2v2h-2z"
        />
        <path
          d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 18c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z"
        />
      </svg>
      Transaction Hash:
    </dt>
    <dd
      class="fill-detail__Value-q3it9r-1 hhYdhc"
    >
      <a
        class="link__StyledLink-sc-1m1n17q-0 bQfGpq"
        href="https://etherscan.io/tx/0x68e018d2c97cf76af6bae65297e6f5b6bc9680b95b828bdea5eb03a0b36ebc77"
        rel="noreferrer noopener"
        target="_blank"
      >
        0x68e018d2c97cf76af6bae65297e6f5b6bc9680b95b828bdea5eb03a0b36ebc77
      </a>
    </dd>
    <dt
      class="fill-detail__Title-q3it9r-0 gJQtdT"
    >
      <svg
        aria-hidden="true"
        class="sc-bdVaJa iJCmgd fill-detail___StyledHelpWidget-q3it9r-2 ddHJjZ"
        fill="currentColor"
        focusable="false"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 6a3.939 3.939 0 00-3.934 3.934h2C10.066 8.867 10.934 8 12 8s1.934.867 1.934 1.934c0 .598-.481 1.032-1.216 1.626a9.208 9.208 0 00-.691.599c-.998.997-1.027 2.056-1.027 2.174V15h2l-.001-.633c.001-.016.033-.386.441-.793.15-.15.339-.3.535-.458.779-.631 1.958-1.584 1.958-3.182A3.937 3.937 0 0012 6zm-1 10h2v2h-2z"
        />
        <path
          d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 18c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z"
        />
      </svg>
      Order Hash:
    </dt>
    <dd
      class="fill-detail__Value-q3it9r-1 hhYdhc"
    >
      <a
        class="link__StyledLink-sc-1m1n17q-0 bQfGpq"
        href="/search?q=0x8104d4c4a32da7f1df357779fe6b8fc11dc6f4287de54566fe22eb35a74b0c71"
      >
        0x8104d4c4a32da7f1df357779fe6b8fc11dc6f4287de54566fe22eb35a74b0c71
      </a>
    </dd>
    <dt
      class="fill-detail__Title-q3it9r-0 gJQtdT"
    >
      <svg
        aria-hidden="true"
        class="sc-bdVaJa iJCmgd fill-detail___StyledHelpWidget-q3it9r-2 ddHJjZ"
        fill="currentColor"
        focusable="false"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 6a3.939 3.939 0 00-3.934 3.934h2C10.066 8.867 10.934 8 12 8s1.934.867 1.934 1.934c0 .598-.481 1.032-1.216 1.626a9.208 9.208 0 00-.691.599c-.998.997-1.027 2.056-1.027 2.174V15h2l-.001-.633c.001-.016.033-.386.441-.793.15-.15.339-.3.535-.458.779-.631 1.958-1.584 1.958-3.182A3.937 3.937 0 0012 6zm-1 10h2v2h-2z"
        />
        <path
          d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 18c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z"
        />
      </svg>
      Sender Address:
    </dt>
    <dd
      class="fill-detail__Value-q3it9r-1 hhYdhc"
    >
      <a
        class="link__StyledLink-sc-1m1n17q-0 bQfGpq"
        href="/search?q=0x0dc411b17d337af85d83ea5a3577d09132aae866"
      >
        0x0dc411b17d337af85d83ea5a3577d09132aae866
      </a>
    </dd>
    <dt
      class="fill-detail__Title-q3it9r-0 gJQtdT"
    >
      <svg
        aria-hidden="true"
        class="sc-bdVaJa iJCmgd fill-detail___StyledHelpWidget-q3it9r-2 ddHJjZ"
        fill="currentColor"
        focusable="false"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 6a3.939 3.939 0 00-3.934 3.934h2C10.066 8.867 10.934 8 12 8s1.934.867 1.934 1.934c0 .598-.481 1.032-1.216 1.626a9.208 9.208 0 00-.691.599c-.998.997-1.027 2.056-1.027 2.174V15h2l-.001-.633c.001-.016.033-.386.441-.793.15-.15.339-.3.535-.458.779-.631 1.958-1.584 1.958-3.182A3.937 3.937 0 0012 6zm-1 10h2v2h-2z"
        />
        <path
          d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 18c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z"
        />
      </svg>
      Date:
    </dt>
    <dd
      class="fill-detail__Value-q3it9r-1 hhYdhc"
    >
      Thursday, October 10th 2019, 06:13:48 AM
    </dd>
    <dt
      class="fill-detail__Title-q3it9r-0 gJQtdT"
    >
      <svg
        aria-hidden="true"
        class="sc-bdVaJa iJCmgd fill-detail___StyledHelpWidget-q3it9r-2 ddHJjZ"
        fill="currentColor"
        focusable="false"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 6a3.939 3.939 0 00-3.934 3.934h2C10.066 8.867 10.934 8 12 8s1.934.867 1.934 1.934c0 .598-.481 1.032-1.216 1.626a9.208 9.208 0 00-.691.599c-.998.997-1.027 2.056-1.027 2.174V15h2l-.001-.633c.001-.016.033-.386.441-.793.15-.15.339-.3.535-.458.779-.631 1.958-1.584 1.958-3.182A3.937 3.937 0 0012 6zm-1 10h2v2h-2z"
        />
        <path
          d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 18c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z"
        />
      </svg>
      Relayer:
    </dt>
    <dd
      class="fill-detail__Value-q3it9r-1 hhYdhc"
    >
      <a
        class="link__StyledLink-sc-1m1n17q-0 bQfGpq fill-relayer-link___StyledRelayerLink-sc-10d6xh4-0 eWOAxu"
        href="/relayers/radar-relay"
      >
        <img
          class="relayer-image___StyledImg-sc-1yudeg-0 hAjqat fill-relayer-link___StyledRelayerImage-sc-10d6xh4-1 uYhgP"
          src="https://0xtracker.com/assets/logos/radar-relay.png"
        />
        Radar Relay
      </a>
    </dd>
    <dt
      class="fill-detail__Title-q3it9r-0 gJQtdT"
    >
      <svg
        aria-hidden="true"
        class="sc-bdVaJa iJCmgd fill-detail___StyledHelpWidget-q3it9r-2 ddHJjZ"
        fill="currentColor"
        focusable="false"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 6a3.939 3.939 0 00-3.934 3.934h2C10.066 8.867 10.934 8 12 8s1.934.867 1.934 1.934c0 .598-.481 1.032-1.216 1.626a9.208 9.208 0 00-.691.599c-.998.997-1.027 2.056-1.027 2.174V15h2l-.001-.633c.001-.016.033-.386.441-.793.15-.15.339-.3.535-.458.779-.631 1.958-1.584 1.958-3.182A3.937 3.937 0 0012 6zm-1 10h2v2h-2z"
        />
        <path
          d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 18c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z"
        />
      </svg>
      Status:
    </dt>
    <dd
      class="fill-detail__Value-q3it9r-1 hhYdhc"
    >
      <span
        class="fill-status-label___StyledSpan-sc-1k6xas7-0 AGPjT badge badge-success"
      >
        successful
      </span>
    </dd>
    <dt
      class="fill-detail__Title-q3it9r-0 gJQtdT"
    >
      <svg
        aria-hidden="true"
        class="sc-bdVaJa iJCmgd fill-detail___StyledHelpWidget-q3it9r-2 ddHJjZ"
        fill="currentColor"
        focusable="false"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 6a3.939 3.939 0 00-3.934 3.934h2C10.066 8.867 10.934 8 12 8s1.934.867 1.934 1.934c0 .598-.481 1.032-1.216 1.626a9.208 9.208 0 00-.691.599c-.998.997-1.027 2.056-1.027 2.174V15h2l-.001-.633c.001-.016.033-.386.441-.793.15-.15.339-.3.535-.458.779-.631 1.958-1.584 1.958-3.182A3.937 3.937 0 0012 6zm-1 10h2v2h-2z"
        />
        <path
          d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 18c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z"
        />
      </svg>
      0x Protocol:
    </dt>
    <dd
      class="fill-detail__Value-q3it9r-1 hhYdhc"
    >
      v2
    </dd>
    <dt
      class="fill-detail__Title-q3it9r-0 gJQtdT"
    >
      <svg
        aria-hidden="true"
        class="sc-bdVaJa iJCmgd fill-detail___StyledHelpWidget-q3it9r-2 ddHJjZ"
        fill="currentColor"
        focusable="false"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 6a3.939 3.939 0 00-3.934 3.934h2C10.066 8.867 10.934 8 12 8s1.934.867 1.934 1.934c0 .598-.481 1.032-1.216 1.626a9.208 9.208 0 00-.691.599c-.998.997-1.027 2.056-1.027 2.174V15h2l-.001-.633c.001-.016.033-.386.441-.793.15-.15.339-.3.535-.458.779-.631 1.958-1.584 1.958-3.182A3.937 3.937 0 0012 6zm-1 10h2v2h-2z"
        />
        <path
          d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 18c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z"
        />
      </svg>
      Value:
    </dt>
    <dd
      class="fill-detail__Value-q3it9r-1 hhYdhc"
    >
      <span>
        $184.29
      </span>
    </dd>
    <dt
      class="fill-detail__Title-q3it9r-0 gJQtdT"
    >
      <svg
        aria-hidden="true"
        class="sc-bdVaJa iJCmgd fill-detail___StyledHelpWidget-q3it9r-2 ddHJjZ"
        fill="currentColor"
        focusable="false"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 6a3.939 3.939 0 00-3.934 3.934h2C10.066 8.867 10.934 8 12 8s1.934.867 1.934 1.934c0 .598-.481 1.032-1.216 1.626a9.208 9.208 0 00-.691.599c-.998.997-1.027 2.056-1.027 2.174V15h2l-.001-.633c.001-.016.033-.386.441-.793.15-.15.339-.3.535-.458.779-.631 1.958-1.584 1.958-3.182A3.937 3.937 0 0012 6zm-1 10h2v2h-2z"
        />
        <path
          d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 18c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z"
        />
      </svg>
      Maker:
    </dt>
    <dd
      class="fill-detail__Value-q3it9r-1 hhYdhc"
    >
      <a
        class="link__StyledLink-sc-1m1n17q-0 bQfGpq"
        href="/traders/0x2cfb4faaece38d5d03ef1ec9dfdf34964d6ab1b3"
      >
        0x2cfb4faaece38d5d03ef1ec9dfdf34964d6ab1b3
      </a>
    </dd>
    <dt
      class="fill-detail__Title-q3it9r-0 gJQtdT"
    >
      <svg
        aria-hidden="true"
        class="sc-bdVaJa iJCmgd fill-detail___StyledHelpWidget-q3it9r-2 ddHJjZ"
        fill="currentColor"
        focusable="false"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 6a3.939 3.939 0 00-3.934 3.934h2C10.066 8.867 10.934 8 12 8s1.934.867 1.934 1.934c0 .598-.481 1.032-1.216 1.626a9.208 9.208 0 00-.691.599c-.998.997-1.027 2.056-1.027 2.174V15h2l-.001-.633c.001-.016.033-.386.441-.793.15-.15.339-.3.535-.458.779-.631 1.958-1.584 1.958-3.182A3.937 3.937 0 0012 6zm-1 10h2v2h-2z"
        />
        <path
          d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 18c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z"
        />
      </svg>
      Taker:
    </dt>
    <dd
      class="fill-detail__Value-q3it9r-1 hhYdhc"
    >
      <a
        class="link__StyledLink-sc-1m1n17q-0 bQfGpq"
        href="/traders/0x0dc411b17d337af85d83ea5a3577d09132aae866"
      >
        0x0dc411b17d337af85d83ea5a3577d09132aae866
      </a>
    </dd>
    <dt
      class="fill-detail__Title-q3it9r-0 gJQtdT"
    >
      <svg
        aria-hidden="true"
        class="sc-bdVaJa iJCmgd fill-detail___StyledHelpWidget-q3it9r-2 ddHJjZ"
        fill="currentColor"
        focusable="false"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 6a3.939 3.939 0 00-3.934 3.934h2C10.066 8.867 10.934 8 12 8s1.934.867 1.934 1.934c0 .598-.481 1.032-1.216 1.626a9.208 9.208 0 00-.691.599c-.998.997-1.027 2.056-1.027 2.174V15h2l-.001-.633c.001-.016.033-.386.441-.793.15-.15.339-.3.535-.458.779-.631 1.958-1.584 1.958-3.182A3.937 3.937 0 0012 6zm-1 10h2v2h-2z"
        />
        <path
          d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 18c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z"
        />
      </svg>
      Maker Assets:
    </dt>
    <dd
      class="fill-detail__Value-q3it9r-1 hhYdhc"
    >
      <ul
        class="list__List-sc-1hr42jb-0 cRmZyp"
      >
        <li
          class="list-item__Container-sc-1m8jbnt-0 kzXFZr"
        >
          <svg
            aria-hidden="true"
            class="sc-bdVaJa cjEDWs list-item___StyledCaretRightIcon-sc-1m8jbnt-1 dKkhXD"
            color="#9F9EB9"
            fill="currentColor"
            focusable="false"
            height="16"
            viewBox="0 0 192 512"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 384.662V127.338c0-17.818 21.543-26.741 34.142-14.142l128.662 128.662c7.81 7.81 7.81 20.474 0 28.284L34.142 398.804C21.543 411.404 0 402.48 0 384.662z"
              fill="currentColor"
            />
          </svg>
          <span>
            0.96955 
            <a
              class="link__StyledLink-sc-1m1n17q-0 bQfGpq"
              href="/tokens/0xc02aaa39b223fe8d0a0e5c4f27ead9083c756cc2"
            >
              Wrapped Ether  (WETH)
            </a>
             
            <span
              class="asset-type-badge__AssetTypeBadge-sc-1ho1nac-0 ifWSro badge badge-dark"
            >
              ERC-20
            </span>
          </span>
        </li>
      </ul>
    </dd>
    <dt
      class="fill-detail__Title-q3it9r-0 gJQtdT"
    >
      <svg
        aria-hidden="true"
        class="sc-bdVaJa iJCmgd fill-detail___StyledHelpWidget-q3it9r-2 ddHJjZ"
        fill="currentColor"
        focusable="false"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 6a3.939 3.939 0 00-3.934 3.934h2C10.066 8.867 10.934 8 12 8s1.934.867 1.934 1.934c0 .598-.481 1.032-1.216 1.626a9.208 9.208 0 00-.691.599c-.998.997-1.027 2.056-1.027 2.174V15h2l-.001-.633c.001-.016.033-.386.441-.793.15-.15.339-.3.535-.458.779-.631 1.958-1.584 1.958-3.182A3.937 3.937 0 0012 6zm-1 10h2v2h-2z"
        />
        <path
          d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 18c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z"
        />
      </svg>
      Taker Assets:
    </dt>
    <dd
      class="fill-detail__Value-q3it9r-1 hhYdhc"
    >
      <ul
        class="list__List-sc-1hr42jb-0 cRmZyp"
      >
        <li
          class="list-item__Container-sc-1m8jbnt-0 kzXFZr"
        >
          <svg
            aria-hidden="true"
            class="sc-bdVaJa cjEDWs list-item___StyledCaretRightIcon-sc-1m8jbnt-1 dKkhXD"
            color="#9F9EB9"
            fill="currentColor"
            focusable="false"
            height="16"
            viewBox="0 0 192 512"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 384.662V127.338c0-17.818 21.543-26.741 34.142-14.142l128.662 128.662c7.81 7.81 7.81 20.474 0 28.284L34.142 398.804C21.543 411.404 0 402.48 0 384.662z"
              fill="currentColor"
            />
          </svg>
          <span>
            5,000 
            <a
              class="link__StyledLink-sc-1m1n17q-0 bQfGpq"
              href="/tokens/0x4946fcea7c692606e8908002e55a582af44ac121"
            >
              FOAM Token  (FOAM)
            </a>
             
            <span
              class="asset-type-badge__AssetTypeBadge-sc-1ho1nac-0 ifWSro badge badge-dark"
            >
              ERC-20
            </span>
          </span>
        </li>
      </ul>
    </dd>
    <dt
      class="fill-detail__Title-q3it9r-0 gJQtdT"
    >
      <svg
        aria-hidden="true"
        class="sc-bdVaJa iJCmgd fill-detail___StyledHelpWidget-q3it9r-2 ddHJjZ"
        fill="currentColor"
        focusable="false"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 6a3.939 3.939 0 00-3.934 3.934h2C10.066 8.867 10.934 8 12 8s1.934.867 1.934 1.934c0 .598-.481 1.032-1.216 1.626a9.208 9.208 0 00-.691.599c-.998.997-1.027 2.056-1.027 2.174V15h2l-.001-.633c.001-.016.033-.386.441-.793.15-.15.339-.3.535-.458.779-.631 1.958-1.584 1.958-3.182A3.937 3.937 0 0012 6zm-1 10h2v2h-2z"
        />
        <path
          d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 18c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z"
        />
      </svg>
      Derived Prices:
    </dt>
    <dd
      class="fill-detail__Value-q3it9r-1 hhYdhc"
    >
      <ul
        class="list__List-sc-1hr42jb-0 cRmZyp"
      >
        <li
          class="list-item__Container-sc-1m8jbnt-0 kzXFZr"
        >
          <svg
            aria-hidden="true"
            class="sc-bdVaJa cjEDWs list-item___StyledCaretRightIcon-sc-1m8jbnt-1 dKkhXD"
            color="#9F9EB9"
            fill="currentColor"
            focusable="false"
            height="16"
            viewBox="0 0 192 512"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 384.662V127.338c0-17.818 21.543-26.741 34.142-14.142l128.662 128.662c7.81 7.81 7.81 20.474 0 28.284L34.142 398.804C21.543 411.404 0 402.48 0 384.662z"
              fill="currentColor"
            />
          </svg>
          <span>
            <a
              class="link__StyledLink-sc-1m1n17q-0 bQfGpq"
              href="/tokens/0xc02aaa39b223fe8d0a0e5c4f27ead9083c756cc2"
            >
              Wrapped Ether  (WETH)
            </a>
            <span
              class="fill-details__PriceBadge-sc-5nb7jb-1 gmfFrK badge"
            >
              <span>
                $190.08
              </span>
            </span>
          </span>
        </li>
        <li
          class="list-item__Container-sc-1m8jbnt-0 kzXFZr"
        >
          <svg
            aria-hidden="true"
            class="sc-bdVaJa cjEDWs list-item___StyledCaretRightIcon-sc-1m8jbnt-1 dKkhXD"
            color="#9F9EB9"
            fill="currentColor"
            focusable="false"
            height="16"
            viewBox="0 0 192 512"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 384.662V127.338c0-17.818 21.543-26.741 34.142-14.142l128.662 128.662c7.81 7.81 7.81 20.474 0 28.284L34.142 398.804C21.543 411.404 0 402.48 0 384.662z"
              fill="currentColor"
            />
          </svg>
          <span>
            <a
              class="link__StyledLink-sc-1m1n17q-0 bQfGpq"
              href="/tokens/0x4946fcea7c692606e8908002e55a582af44ac121"
            >
              FOAM Token  (FOAM)
            </a>
            <span
              class="fill-details__PriceBadge-sc-5nb7jb-1 gmfFrK badge"
            >
              <span>
                $0.04
              </span>
            </span>
          </span>
        </li>
      </ul>
    </dd>
    <dt
      class="fill-detail__Title-q3it9r-0 gJQtdT"
    >
      <svg
        aria-hidden="true"
        class="sc-bdVaJa iJCmgd fill-detail___StyledHelpWidget-q3it9r-2 ddHJjZ"
        fill="currentColor"
        focusable="false"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 6a3.939 3.939 0 00-3.934 3.934h2C10.066 8.867 10.934 8 12 8s1.934.867 1.934 1.934c0 .598-.481 1.032-1.216 1.626a9.208 9.208 0 00-.691.599c-.998.997-1.027 2.056-1.027 2.174V15h2l-.001-.633c.001-.016.033-.386.441-.793.15-.15.339-.3.535-.458.779-.631 1.958-1.584 1.958-3.182A3.937 3.937 0 0012 6zm-1 10h2v2h-2z"
        />
        <path
          d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 18c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z"
        />
      </svg>
      Maker Fee:
    </dt>
    <dd
      class="fill-detail__Value-q3it9r-1 hhYdhc"
    >
      None
    </dd>
    <dt
      class="fill-detail__Title-q3it9r-0 gJQtdT"
    >
      <svg
        aria-hidden="true"
        class="sc-bdVaJa iJCmgd fill-detail___StyledHelpWidget-q3it9r-2 ddHJjZ"
        fill="currentColor"
        focusable="false"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 6a3.939 3.939 0 00-3.934 3.934h2C10.066 8.867 10.934 8 12 8s1.934.867 1.934 1.934c0 .598-.481 1.032-1.216 1.626a9.208 9.208 0 00-.691.599c-.998.997-1.027 2.056-1.027 2.174V15h2l-.001-.633c.001-.016.033-.386.441-.793.15-.15.339-.3.535-.458.779-.631 1.958-1.584 1.958-3.182A3.937 3.937 0 0012 6zm-1 10h2v2h-2z"
        />
        <path
          d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 18c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z"
        />
      </svg>
      Taker Fee:
    </dt>
    <dd
      class="fill-detail__Value-q3it9r-1 hhYdhc"
    >
      None
    </dd>
    <dt
      class="fill-detail__Title-q3it9r-0 gJQtdT"
    >
      <svg
        aria-hidden="true"
        class="sc-bdVaJa iJCmgd fill-detail___StyledHelpWidget-q3it9r-2 ddHJjZ"
        fill="currentColor"
        focusable="false"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 6a3.939 3.939 0 00-3.934 3.934h2C10.066 8.867 10.934 8 12 8s1.934.867 1.934 1.934c0 .598-.481 1.032-1.216 1.626a9.208 9.208 0 00-.691.599c-.998.997-1.027 2.056-1.027 2.174V15h2l-.001-.633c.001-.016.033-.386.441-.793.15-.15.339-.3.535-.458.779-.631 1.958-1.584 1.958-3.182A3.937 3.937 0 0012 6zm-1 10h2v2h-2z"
        />
        <path
          d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 18c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z"
        />
      </svg>
      Fee Recipient:
    </dt>
    <dd
      class="fill-detail__Value-q3it9r-1 hhYdhc"
    >
      <a
        class="link__StyledLink-sc-1m1n17q-0 bQfGpq"
        href="/search?q=0xa258b39954cef5cb142fd567a46cddb31a670124"
      >
        0xa258b39954cef5cb142fd567a46cddb31a670124
      </a>
    </dd>
  </dl>
</DocumentFragment>
`;

exports[`fillDetails component should render V3 fill 1`] = `
<DocumentFragment>
  <dl
    class="fill-details__FillDetailList-sc-5nb7jb-0 mycsW"
  >
    <dt
      class="fill-detail__Title-q3it9r-0 gJQtdT"
    >
      <svg
        aria-hidden="true"
        class="sc-bdVaJa iJCmgd fill-detail___StyledHelpWidget-q3it9r-2 ddHJjZ"
        fill="currentColor"
        focusable="false"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 6a3.939 3.939 0 00-3.934 3.934h2C10.066 8.867 10.934 8 12 8s1.934.867 1.934 1.934c0 .598-.481 1.032-1.216 1.626a9.208 9.208 0 00-.691.599c-.998.997-1.027 2.056-1.027 2.174V15h2l-.001-.633c.001-.016.033-.386.441-.793.15-.15.339-.3.535-.458.779-.631 1.958-1.584 1.958-3.182A3.937 3.937 0 0012 6zm-1 10h2v2h-2z"
        />
        <path
          d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 18c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z"
        />
      </svg>
      Transaction Hash:
    </dt>
    <dd
      class="fill-detail__Value-q3it9r-1 hhYdhc"
    >
      <a
        class="link__StyledLink-sc-1m1n17q-0 bQfGpq"
        href="https://etherscan.io/tx/0x68e018d2c97cf76af6bae65297e6f5b6bc9680b95b828bdea5eb03a0b36ebc77"
        rel="noreferrer noopener"
        target="_blank"
      >
        0x68e018d2c97cf76af6bae65297e6f5b6bc9680b95b828bdea5eb03a0b36ebc77
      </a>
    </dd>
    <dt
      class="fill-detail__Title-q3it9r-0 gJQtdT"
    >
      <svg
        aria-hidden="true"
        class="sc-bdVaJa iJCmgd fill-detail___StyledHelpWidget-q3it9r-2 ddHJjZ"
        fill="currentColor"
        focusable="false"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 6a3.939 3.939 0 00-3.934 3.934h2C10.066 8.867 10.934 8 12 8s1.934.867 1.934 1.934c0 .598-.481 1.032-1.216 1.626a9.208 9.208 0 00-.691.599c-.998.997-1.027 2.056-1.027 2.174V15h2l-.001-.633c.001-.016.033-.386.441-.793.15-.15.339-.3.535-.458.779-.631 1.958-1.584 1.958-3.182A3.937 3.937 0 0012 6zm-1 10h2v2h-2z"
        />
        <path
          d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 18c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z"
        />
      </svg>
      Order Hash:
    </dt>
    <dd
      class="fill-detail__Value-q3it9r-1 hhYdhc"
    >
      <a
        class="link__StyledLink-sc-1m1n17q-0 bQfGpq"
        href="/search?q=0x8104d4c4a32da7f1df357779fe6b8fc11dc6f4287de54566fe22eb35a74b0c71"
      >
        0x8104d4c4a32da7f1df357779fe6b8fc11dc6f4287de54566fe22eb35a74b0c71
      </a>
    </dd>
    <dt
      class="fill-detail__Title-q3it9r-0 gJQtdT"
    >
      <svg
        aria-hidden="true"
        class="sc-bdVaJa iJCmgd fill-detail___StyledHelpWidget-q3it9r-2 ddHJjZ"
        fill="currentColor"
        focusable="false"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 6a3.939 3.939 0 00-3.934 3.934h2C10.066 8.867 10.934 8 12 8s1.934.867 1.934 1.934c0 .598-.481 1.032-1.216 1.626a9.208 9.208 0 00-.691.599c-.998.997-1.027 2.056-1.027 2.174V15h2l-.001-.633c.001-.016.033-.386.441-.793.15-.15.339-.3.535-.458.779-.631 1.958-1.584 1.958-3.182A3.937 3.937 0 0012 6zm-1 10h2v2h-2z"
        />
        <path
          d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 18c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z"
        />
      </svg>
      Sender Address:
    </dt>
    <dd
      class="fill-detail__Value-q3it9r-1 hhYdhc"
    >
      <a
        class="link__StyledLink-sc-1m1n17q-0 bQfGpq"
        href="/search?q=0x0dc411b17d337af85d83ea5a3577d09132aae866"
      >
        0x0dc411b17d337af85d83ea5a3577d09132aae866
      </a>
    </dd>
    <dt
      class="fill-detail__Title-q3it9r-0 gJQtdT"
    >
      <svg
        aria-hidden="true"
        class="sc-bdVaJa iJCmgd fill-detail___StyledHelpWidget-q3it9r-2 ddHJjZ"
        fill="currentColor"
        focusable="false"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 6a3.939 3.939 0 00-3.934 3.934h2C10.066 8.867 10.934 8 12 8s1.934.867 1.934 1.934c0 .598-.481 1.032-1.216 1.626a9.208 9.208 0 00-.691.599c-.998.997-1.027 2.056-1.027 2.174V15h2l-.001-.633c.001-.016.033-.386.441-.793.15-.15.339-.3.535-.458.779-.631 1.958-1.584 1.958-3.182A3.937 3.937 0 0012 6zm-1 10h2v2h-2z"
        />
        <path
          d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 18c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z"
        />
      </svg>
      Date:
    </dt>
    <dd
      class="fill-detail__Value-q3it9r-1 hhYdhc"
    >
      Thursday, October 10th 2019, 06:13:48 AM
    </dd>
    <dt
      class="fill-detail__Title-q3it9r-0 gJQtdT"
    >
      <svg
        aria-hidden="true"
        class="sc-bdVaJa iJCmgd fill-detail___StyledHelpWidget-q3it9r-2 ddHJjZ"
        fill="currentColor"
        focusable="false"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 6a3.939 3.939 0 00-3.934 3.934h2C10.066 8.867 10.934 8 12 8s1.934.867 1.934 1.934c0 .598-.481 1.032-1.216 1.626a9.208 9.208 0 00-.691.599c-.998.997-1.027 2.056-1.027 2.174V15h2l-.001-.633c.001-.016.033-.386.441-.793.15-.15.339-.3.535-.458.779-.631 1.958-1.584 1.958-3.182A3.937 3.937 0 0012 6zm-1 10h2v2h-2z"
        />
        <path
          d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 18c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z"
        />
      </svg>
      Relayer:
    </dt>
    <dd
      class="fill-detail__Value-q3it9r-1 hhYdhc"
    >
      <a
        class="link__StyledLink-sc-1m1n17q-0 bQfGpq fill-relayer-link___StyledRelayerLink-sc-10d6xh4-0 eWOAxu"
        href="/relayers/radar-relay"
      >
        <img
          class="relayer-image___StyledImg-sc-1yudeg-0 hAjqat fill-relayer-link___StyledRelayerImage-sc-10d6xh4-1 uYhgP"
          src="https://0xtracker.com/assets/logos/radar-relay.png"
        />
        Radar Relay
      </a>
    </dd>
    <dt
      class="fill-detail__Title-q3it9r-0 gJQtdT"
    >
      <svg
        aria-hidden="true"
        class="sc-bdVaJa iJCmgd fill-detail___StyledHelpWidget-q3it9r-2 ddHJjZ"
        fill="currentColor"
        focusable="false"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 6a3.939 3.939 0 00-3.934 3.934h2C10.066 8.867 10.934 8 12 8s1.934.867 1.934 1.934c0 .598-.481 1.032-1.216 1.626a9.208 9.208 0 00-.691.599c-.998.997-1.027 2.056-1.027 2.174V15h2l-.001-.633c.001-.016.033-.386.441-.793.15-.15.339-.3.535-.458.779-.631 1.958-1.584 1.958-3.182A3.937 3.937 0 0012 6zm-1 10h2v2h-2z"
        />
        <path
          d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 18c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z"
        />
      </svg>
      Status:
    </dt>
    <dd
      class="fill-detail__Value-q3it9r-1 hhYdhc"
    >
      <span
        class="fill-status-label___StyledSpan-sc-1k6xas7-0 AGPjT badge badge-success"
      >
        successful
      </span>
    </dd>
    <dt
      class="fill-detail__Title-q3it9r-0 gJQtdT"
    >
      <svg
        aria-hidden="true"
        class="sc-bdVaJa iJCmgd fill-detail___StyledHelpWidget-q3it9r-2 ddHJjZ"
        fill="currentColor"
        focusable="false"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 6a3.939 3.939 0 00-3.934 3.934h2C10.066 8.867 10.934 8 12 8s1.934.867 1.934 1.934c0 .598-.481 1.032-1.216 1.626a9.208 9.208 0 00-.691.599c-.998.997-1.027 2.056-1.027 2.174V15h2l-.001-.633c.001-.016.033-.386.441-.793.15-.15.339-.3.535-.458.779-.631 1.958-1.584 1.958-3.182A3.937 3.937 0 0012 6zm-1 10h2v2h-2z"
        />
        <path
          d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 18c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z"
        />
      </svg>
      0x Protocol:
    </dt>
    <dd
      class="fill-detail__Value-q3it9r-1 hhYdhc"
    >
      v2
    </dd>
    <dt
      class="fill-detail__Title-q3it9r-0 gJQtdT"
    >
      <svg
        aria-hidden="true"
        class="sc-bdVaJa iJCmgd fill-detail___StyledHelpWidget-q3it9r-2 ddHJjZ"
        fill="currentColor"
        focusable="false"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 6a3.939 3.939 0 00-3.934 3.934h2C10.066 8.867 10.934 8 12 8s1.934.867 1.934 1.934c0 .598-.481 1.032-1.216 1.626a9.208 9.208 0 00-.691.599c-.998.997-1.027 2.056-1.027 2.174V15h2l-.001-.633c.001-.016.033-.386.441-.793.15-.15.339-.3.535-.458.779-.631 1.958-1.584 1.958-3.182A3.937 3.937 0 0012 6zm-1 10h2v2h-2z"
        />
        <path
          d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 18c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z"
        />
      </svg>
      Value:
    </dt>
    <dd
      class="fill-detail__Value-q3it9r-1 hhYdhc"
    >
      <span>
        $184.29
      </span>
    </dd>
    <dt
      class="fill-detail__Title-q3it9r-0 gJQtdT"
    >
      <svg
        aria-hidden="true"
        class="sc-bdVaJa iJCmgd fill-detail___StyledHelpWidget-q3it9r-2 ddHJjZ"
        fill="currentColor"
        focusable="false"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 6a3.939 3.939 0 00-3.934 3.934h2C10.066 8.867 10.934 8 12 8s1.934.867 1.934 1.934c0 .598-.481 1.032-1.216 1.626a9.208 9.208 0 00-.691.599c-.998.997-1.027 2.056-1.027 2.174V15h2l-.001-.633c.001-.016.033-.386.441-.793.15-.15.339-.3.535-.458.779-.631 1.958-1.584 1.958-3.182A3.937 3.937 0 0012 6zm-1 10h2v2h-2z"
        />
        <path
          d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 18c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z"
        />
      </svg>
      Maker:
    </dt>
    <dd
      class="fill-detail__Value-q3it9r-1 hhYdhc"
    >
      <a
        class="link__StyledLink-sc-1m1n17q-0 bQfGpq"
        href="/traders/0x2cfb4faaece38d5d03ef1ec9dfdf34964d6ab1b3"
      >
        0x2cfb4faaece38d5d03ef1ec9dfdf34964d6ab1b3
      </a>
    </dd>
    <dt
      class="fill-detail__Title-q3it9r-0 gJQtdT"
    >
      <svg
        aria-hidden="true"
        class="sc-bdVaJa iJCmgd fill-detail___StyledHelpWidget-q3it9r-2 ddHJjZ"
        fill="currentColor"
        focusable="false"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 6a3.939 3.939 0 00-3.934 3.934h2C10.066 8.867 10.934 8 12 8s1.934.867 1.934 1.934c0 .598-.481 1.032-1.216 1.626a9.208 9.208 0 00-.691.599c-.998.997-1.027 2.056-1.027 2.174V15h2l-.001-.633c.001-.016.033-.386.441-.793.15-.15.339-.3.535-.458.779-.631 1.958-1.584 1.958-3.182A3.937 3.937 0 0012 6zm-1 10h2v2h-2z"
        />
        <path
          d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 18c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z"
        />
      </svg>
      Taker:
    </dt>
    <dd
      class="fill-detail__Value-q3it9r-1 hhYdhc"
    >
      <a
        class="link__StyledLink-sc-1m1n17q-0 bQfGpq"
        href="/traders/0x0dc411b17d337af85d83ea5a3577d09132aae866"
      >
        0x0dc411b17d337af85d83ea5a3577d09132aae866
      </a>
    </dd>
    <dt
      class="fill-detail__Title-q3it9r-0 gJQtdT"
    >
      <svg
        aria-hidden="true"
        class="sc-bdVaJa iJCmgd fill-detail___StyledHelpWidget-q3it9r-2 ddHJjZ"
        fill="currentColor"
        focusable="false"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 6a3.939 3.939 0 00-3.934 3.934h2C10.066 8.867 10.934 8 12 8s1.934.867 1.934 1.934c0 .598-.481 1.032-1.216 1.626a9.208 9.208 0 00-.691.599c-.998.997-1.027 2.056-1.027 2.174V15h2l-.001-.633c.001-.016.033-.386.441-.793.15-.15.339-.3.535-.458.779-.631 1.958-1.584 1.958-3.182A3.937 3.937 0 0012 6zm-1 10h2v2h-2z"
        />
        <path
          d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 18c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z"
        />
      </svg>
      Maker Assets:
    </dt>
    <dd
      class="fill-detail__Value-q3it9r-1 hhYdhc"
    >
      <ul
        class="list__List-sc-1hr42jb-0 cRmZyp"
      >
        <li
          class="list-item__Container-sc-1m8jbnt-0 kzXFZr"
        >
          <svg
            aria-hidden="true"
            class="sc-bdVaJa cjEDWs list-item___StyledCaretRightIcon-sc-1m8jbnt-1 dKkhXD"
            color="#9F9EB9"
            fill="currentColor"
            focusable="false"
            height="16"
            viewBox="0 0 192 512"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 384.662V127.338c0-17.818 21.543-26.741 34.142-14.142l128.662 128.662c7.81 7.81 7.81 20.474 0 28.284L34.142 398.804C21.543 411.404 0 402.48 0 384.662z"
              fill="currentColor"
            />
          </svg>
          <span>
            0.96955 
            <a
              class="link__StyledLink-sc-1m1n17q-0 bQfGpq"
              href="/tokens/0xc02aaa39b223fe8d0a0e5c4f27ead9083c756cc2"
            >
              Wrapped Ether  (WETH)
            </a>
             
            <span
              class="asset-type-badge__AssetTypeBadge-sc-1ho1nac-0 ifWSro badge badge-dark"
            >
              ERC-20
            </span>
          </span>
        </li>
      </ul>
    </dd>
    <dt
      class="fill-detail__Title-q3it9r-0 gJQtdT"
    >
      <svg
        aria-hidden="true"
        class="sc-bdVaJa iJCmgd fill-detail___StyledHelpWidget-q3it9r-2 ddHJjZ"
        fill="currentColor"
        focusable="false"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 6a3.939 3.939 0 00-3.934 3.934h2C10.066 8.867 10.934 8 12 8s1.934.867 1.934 1.934c0 .598-.481 1.032-1.216 1.626a9.208 9.208 0 00-.691.599c-.998.997-1.027 2.056-1.027 2.174V15h2l-.001-.633c.001-.016.033-.386.441-.793.15-.15.339-.3.535-.458.779-.631 1.958-1.584 1.958-3.182A3.937 3.937 0 0012 6zm-1 10h2v2h-2z"
        />
        <path
          d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 18c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z"
        />
      </svg>
      Taker Assets:
    </dt>
    <dd
      class="fill-detail__Value-q3it9r-1 hhYdhc"
    >
      <ul
        class="list__List-sc-1hr42jb-0 cRmZyp"
      >
        <li
          class="list-item__Container-sc-1m8jbnt-0 kzXFZr"
        >
          <svg
            aria-hidden="true"
            class="sc-bdVaJa cjEDWs list-item___StyledCaretRightIcon-sc-1m8jbnt-1 dKkhXD"
            color="#9F9EB9"
            fill="currentColor"
            focusable="false"
            height="16"
            viewBox="0 0 192 512"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 384.662V127.338c0-17.818 21.543-26.741 34.142-14.142l128.662 128.662c7.81 7.81 7.81 20.474 0 28.284L34.142 398.804C21.543 411.404 0 402.48 0 384.662z"
              fill="currentColor"
            />
          </svg>
          <span>
            5,000 
            <a
              class="link__StyledLink-sc-1m1n17q-0 bQfGpq"
              href="/tokens/0x4946fcea7c692606e8908002e55a582af44ac121"
            >
              FOAM Token  (FOAM)
            </a>
             
            <span
              class="asset-type-badge__AssetTypeBadge-sc-1ho1nac-0 ifWSro badge badge-dark"
            >
              ERC-20
            </span>
          </span>
        </li>
      </ul>
    </dd>
    <dt
      class="fill-detail__Title-q3it9r-0 gJQtdT"
    >
      <svg
        aria-hidden="true"
        class="sc-bdVaJa iJCmgd fill-detail___StyledHelpWidget-q3it9r-2 ddHJjZ"
        fill="currentColor"
        focusable="false"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 6a3.939 3.939 0 00-3.934 3.934h2C10.066 8.867 10.934 8 12 8s1.934.867 1.934 1.934c0 .598-.481 1.032-1.216 1.626a9.208 9.208 0 00-.691.599c-.998.997-1.027 2.056-1.027 2.174V15h2l-.001-.633c.001-.016.033-.386.441-.793.15-.15.339-.3.535-.458.779-.631 1.958-1.584 1.958-3.182A3.937 3.937 0 0012 6zm-1 10h2v2h-2z"
        />
        <path
          d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 18c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z"
        />
      </svg>
      Derived Prices:
    </dt>
    <dd
      class="fill-detail__Value-q3it9r-1 hhYdhc"
    >
      <ul
        class="list__List-sc-1hr42jb-0 cRmZyp"
      >
        <li
          class="list-item__Container-sc-1m8jbnt-0 kzXFZr"
        >
          <svg
            aria-hidden="true"
            class="sc-bdVaJa cjEDWs list-item___StyledCaretRightIcon-sc-1m8jbnt-1 dKkhXD"
            color="#9F9EB9"
            fill="currentColor"
            focusable="false"
            height="16"
            viewBox="0 0 192 512"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 384.662V127.338c0-17.818 21.543-26.741 34.142-14.142l128.662 128.662c7.81 7.81 7.81 20.474 0 28.284L34.142 398.804C21.543 411.404 0 402.48 0 384.662z"
              fill="currentColor"
            />
          </svg>
          <span>
            <a
              class="link__StyledLink-sc-1m1n17q-0 bQfGpq"
              href="/tokens/0xc02aaa39b223fe8d0a0e5c4f27ead9083c756cc2"
            >
              Wrapped Ether  (WETH)
            </a>
            <span
              class="fill-details__PriceBadge-sc-5nb7jb-1 gmfFrK badge"
            >
              <span>
                $190.08000
              </span>
            </span>
          </span>
        </li>
        <li
          class="list-item__Container-sc-1m8jbnt-0 kzXFZr"
        >
          <svg
            aria-hidden="true"
            class="sc-bdVaJa cjEDWs list-item___StyledCaretRightIcon-sc-1m8jbnt-1 dKkhXD"
            color="#9F9EB9"
            fill="currentColor"
            focusable="false"
            height="16"
            viewBox="0 0 192 512"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 384.662V127.338c0-17.818 21.543-26.741 34.142-14.142l128.662 128.662c7.81 7.81 7.81 20.474 0 28.284L34.142 398.804C21.543 411.404 0 402.48 0 384.662z"
              fill="currentColor"
            />
          </svg>
          <span>
            <a
              class="link__StyledLink-sc-1m1n17q-0 bQfGpq"
              href="/tokens/0x4946fcea7c692606e8908002e55a582af44ac121"
            >
              FOAM Token  (FOAM)
            </a>
            <span
              class="fill-details__PriceBadge-sc-5nb7jb-1 gmfFrK badge"
            >
              <span>
                $0.03686
              </span>
            </span>
          </span>
        </li>
      </ul>
    </dd>
    <dt
      class="fill-detail__Title-q3it9r-0 gJQtdT"
    >
      <svg
        aria-hidden="true"
        class="sc-bdVaJa iJCmgd fill-detail___StyledHelpWidget-q3it9r-2 ddHJjZ"
        fill="currentColor"
        focusable="false"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 6a3.939 3.939 0 00-3.934 3.934h2C10.066 8.867 10.934 8 12 8s1.934.867 1.934 1.934c0 .598-.481 1.032-1.216 1.626a9.208 9.208 0 00-.691.599c-.998.997-1.027 2.056-1.027 2.174V15h2l-.001-.633c.001-.016.033-.386.441-.793.15-.15.339-.3.535-.458.779-.631 1.958-1.584 1.958-3.182A3.937 3.937 0 0012 6zm-1 10h2v2h-2z"
        />
        <path
          d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 18c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z"
        />
      </svg>
      Fee Recipient:
    </dt>
    <dd
      class="fill-detail__Value-q3it9r-1 hhYdhc"
    >
      <a
        class="link__StyledLink-sc-1m1n17q-0 bQfGpq"
        href="/search?q=0xa258b39954cef5cb142fd567a46cddb31a670124"
      >
        0xa258b39954cef5cb142fd567a46cddb31a670124
      </a>
    </dd>
    <dt
      class="fill-detail__Title-q3it9r-0 gJQtdT"
    >
      <svg
        aria-hidden="true"
        class="sc-bdVaJa iJCmgd fill-detail___StyledHelpWidget-q3it9r-2 ddHJjZ"
        fill="currentColor"
        focusable="false"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 6a3.939 3.939 0 00-3.934 3.934h2C10.066 8.867 10.934 8 12 8s1.934.867 1.934 1.934c0 .598-.481 1.032-1.216 1.626a9.208 9.208 0 00-.691.599c-.998.997-1.027 2.056-1.027 2.174V15h2l-.001-.633c.001-.016.033-.386.441-.793.15-.15.339-.3.535-.458.779-.631 1.958-1.584 1.958-3.182A3.937 3.937 0 0012 6zm-1 10h2v2h-2z"
        />
        <path
          d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 18c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z"
        />
      </svg>
      Protocol Fee:
    </dt>
    <dd
      class="fill-detail__Value-q3it9r-1 hhYdhc"
    >
      0.0001 ETH
      <span
        class="fill-details__PriceBadge-sc-5nb7jb-1 gmfFrK badge"
      >
        <span>
          $0.20000
        </span>
      </span>
    </dd>
  </dl>
</DocumentFragment>
`;
